--- a/style.css
+++ b/style.css
@@ -1,14 +1,43 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+body {
+  font-family: "poppins", sans-serif;
+}
+
+p{
+  text-align: justify;
+  line-height: 30px;
+}
+
+a{
+  text-decoration: none;
+}
+
+nav{
+  background-color: white;
+  position: fixed;
+  top: 0;
+}
+
+nav img {
+  width: 100px;
+}
+
+
+
 .content {
-  margin-top: 160px;
+  margin-top: 80px;
   margin-bottom: 80px;
+}
+
+.content img {
+  width: 80%;
+  border-radius: 12px;
 }
 
 .sinopsis h1 {
   color: #ff6a3c;
   font-weight: 500;
-  font-family: "poppins", sans-serif;
 }
 
 .sinopsis p {
@@ -49,11 +78,38 @@ footer {
   justify-content: center;
     border-top: #ff6a3c 1px solid;
 }
+
+footer a{
+  color: #ff6a3c;
+}
+
+footer a:hover{
+  color: #d83200;
+}
+
 footer p {
   color: #ff6a3c;
-  font-family: "poppins", sans-serif;
   text-align: center;
   margin-top: 20px;
+}
+
+/* About Tab */
+.about{
+  margin-top: 60px;
+  margin-bottom: 80px;
+}
+
+.about h1{
+  color: #ff6a3c;
+  font-weight: 500;
+  margin-bottom: 60px;
+  letter-spacing: 20px;
+  font-size: 96px;
+}
+
+.carousel img{
+  border-radius: 12px;
+  width: 100%;
 }
 
 /* Responsive */
@@ -61,6 +117,16 @@ footer p {
 /* Mobile */
 /* Potrait */
 @media (max-width: 575.98px) {
+
+.content {
+  margin-top: 50px;
+  margin-bottom: 80px;
+}
+
+.content img{
+  margin-left: 10%;
+}
+
   .sinopsis {
     margin-top: 30px;
   }
@@ -74,6 +140,38 @@ footer p {
     font-size: 18px;
   }
 
+  .about {
+  margin-left: 2%;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  }
+
+  .carousel img{
+  border-radius: 12px;
+  width: 100%;
+}
+
+  .about h1{
+  color: #ff6a3c;
+  font-weight: 500;
+  margin-bottom: 20px;
+  letter-spacing: 20px;
+  font-size: 96px;
+}
+
+  .about p{
+  margin-top: 30px;
+  margin-bottom: 40px;
+}
+
+.about h1{
+  color: #ff6a3c;
+  font-weight: 500;
+  margin-bottom: 60px;
+  letter-spacing: 20px;
+  font-size: 96px;
+}
+
   footer {
     height: auto;
     padding-bottom: 20px;
@@ -86,6 +184,17 @@ footer p {
 }
 
 @media (max-width: 767.98px) {
+
+  .content {
+  margin-top: 50px;
+  margin-bottom: 80px;
+}
+
+.content img{
+  width: 100%;
+  border-radius: 12px;
+}
+
   .sinopsis {
     margin-top: 30px;
   }
@@ -99,4 +208,9 @@ footer p {
     padding: 18px 36px;
     font-size: 20px;
   }
+
+  .about p{
+  margin-top: 30px;
+  margin-bottom: 40px;
+}
 }
