--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: "poppins", sans-serif;
+  overflow-x: hidden;
 }
 
 p{
@@ -124,7 +125,7 @@ footer p {
 }
 
 .content img{
-  margin-left: 10%;
+  margin-left: 0;
 }
 
   .sinopsis {
@@ -143,11 +144,11 @@ footer p {
   .about {
   margin-top: 30px;
   margin-bottom: 30px;
-  width: 97%;
   }
 
   .carousel img{
   border-radius: 12px;
+  width: 95%;
 }
 
   .about h1{
@@ -155,20 +156,13 @@ footer p {
   font-weight: 500;
   margin-bottom: 20px;
   letter-spacing: 20px;
-  font-size: 96px;
+  font-size: 80px;
 }
 
   .about p{
   margin-top: 30px;
   margin-bottom: 40px;
-}
-
-.about h1{
-  color: #ff6a3c;
-  font-weight: 500;
-  margin-bottom: 60px;
-  letter-spacing: 20px;
-  font-size: 96px;
+  width: 95%;
 }
 
   footer {
